# cloudlab

./: .gitignore  CHECKLIST.md  IMPLEMENTATION.md  README.md
.github/: dependabot.yml
alloy/: .env.example  config.alloy  config.alloy.tpl  docker-compose.yml
ansible/: .ansible-lint  .yamllint  README.md  ansible.cfg  pyproject.toml  requirements-test.txt  requirements.txt  requirements.yml  test.sh
ansible/group_vars/: all.yml
ansible/inventory/: production.py
ansible/playbooks/: site.yml
ansible/roles/bootstrap/defaults/: main.yml
ansible/roles/bootstrap/handlers/: main.yml
ansible/roles/bootstrap/tasks/: main.yml
ansible/roles/common/molecule/default/: converge.yml  molecule.yml  test_common.py
ansible/roles/common/tasks/: main.yml
ansible/roles/docker/handlers/: main.yml
ansible/roles/docker/molecule/default/: converge.yml  molecule.yml  prepare.yml  test_docker.py
ansible/roles/docker/tasks/: main.yml
ansible/roles/docker/templates/: daemon.json.j2
ansible/roles/monitoring/handlers/: main.yml
ansible/roles/monitoring/molecule/default/: converge.yml  molecule.yml  prepare.yml  test_monitoring.py
ansible/roles/monitoring/tasks/: main.yml
ansible/roles/monitoring/templates/: config.alloy.j2
ansible/roles/security/handlers/: main.yml
ansible/roles/security/molecule/default/: converge.yml  molecule.yml  test_security.py
ansible/roles/security/tasks/: main.yml
ansible/roles/security/templates/: jail.local.j2  sshd_custom.conf.j2
docs/: DEPLOYMENT.md  PRE_MERGE_CHECKLIST.md  QUICK_REFERENCE.md  SECURITY.md  SETUP.md  (+1 more)
(+29 files in other folders)
